--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,14 @@ body {
 }
 
 a {
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
   text-decoration: none;
 }
 
 a:hover {
-  color: #469fdf;
+ /*  color: #469fdf; */
+  color: #71c696;
   text-decoration: none;
 }
 
@@ -37,7 +39,8 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #2487ce;
+  /* background: #2487ce; */
+  background: #00a84a;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -49,7 +52,8 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #3e9bdd;
+  /* background: #3e9bdd; */
+  background: #71c696;
   color: #fff;
 }
 .back-to-top.active {
@@ -135,7 +139,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
 }
 #header .logo a {
-  color: #16507b;
+  color: #00a84a;
 }
 #header .logo img {
   max-height: 40px;
@@ -171,7 +175,8 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: space-between;
   padding: 10px 0 10px 30px;
   font-size: 14px;
-  color: #16507b;
+  /* color: #16507b; */
+  color: #71c696;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -181,10 +186,12 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
 }
 .navbar .getstarted, .navbar .getstarted:focus {
-  background: #2487ce;
+  /* background: #2487ce; */
+  background: #00a84a;
   padding: 8px 20px;
   margin-left: 30px;
   border-radius: 4px;
@@ -192,7 +199,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 .navbar .getstarted:hover, .navbar .getstarted:focus:hover {
   color: #fff;
-  background: #3194db;
+  /* background: #3194db; */
+  background: #00a84a;
 }
 .navbar .dropdown ul {
   display: block;
@@ -220,7 +228,8 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -251,7 +260,8 @@ h1, h2, h3, h4, h5, h6 {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #124265;
+  /* color: #124265; */
+  color: #00a84a;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -302,10 +312,12 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-mobile a, .navbar-mobile a:focus {
   padding: 10px 20px;
   font-size: 15px;
-  color: #124265;
+  /* color: #124265; */
+  color: #00a84a;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -331,7 +343,8 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -365,11 +378,13 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 56px;
   font-weight: 700;
   line-height: 72px;
-  color: #124265;
+  /* color: #124265; */
+  color: #00a84a;
   font-family: "Poppins", sans-serif;
 }
 #hero h2 {
-  color: #5e5e5e;
+  /* color: #5e5e5e; */
+  color: #00a84a;
   margin: 10px 0 0 0;
   font-size: 22px;
 }
@@ -384,10 +399,11 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
-  background: #2487ce;
+  /* background: #2487ce; */
+  background: #00a84a;
 }
 #hero .btn-get-started:hover {
-  background: #3194db;
+  background: #00a84a;
 }
 #hero .icon-boxes {
   margin-top: 100px;
@@ -423,13 +439,15 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.3s ease-in-out;
   font-size: 36px;
   line-height: 1;
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
 }
 #hero .icon-box:hover {
   transform: scale(1.08);
 }
 #hero .icon-box:hover .title a {
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
 }
 @media (min-width: 1024px) {
   #hero {
@@ -477,7 +495,8 @@ section {
   text-transform: uppercase;
   margin-bottom: 20px;
   padding-bottom: 0;
-  color: #124265;
+  /* color: #124265; */
+  color: #00a84a;
 }
 .section-title p {
   margin-bottom: 0;
@@ -508,7 +527,8 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
   line-height: 1;
 }
 .about .content p:last-child {
@@ -524,14 +544,16 @@ section {
   border-radius: 5px;
   transition: 0.3s;
   line-height: 1;
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
   margin-top: 6px;
   border: 2px solid #2487ce;
 }
 .about .content .btn-learn-more:hover {
-  background: #2487ce;
+  /* background: #2487ce; */
+  background: #00a84a;
   color: #fff;
   text-decoration: none;
 }
@@ -551,7 +573,8 @@ section {
   line-height: 48px;
   display: block;
   font-weight: 700;
-  color: #124265;
+  /* color: #124265; */
+  color: #00a84a;
   margin-left: 80px;
   margin: auto;
 }
@@ -560,7 +583,8 @@ section {
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 14px;
-  color: #1e6ca6;
+  /* color: #1e6ca6; */
+  color: #00a84a;
 }
 
 /*--------------------------------------------------------------
@@ -572,7 +596,8 @@ section {
 .about-video .content h3 {
   font-weight: 700;
   font-size: 24px;
-  color: #124265;
+  /* color: #124265; */
+  color: #00a84a;
 }
 .about-video .content ul {
   list-style: none;
@@ -585,7 +610,8 @@ section {
 }
 .about-video .content ul i {
   font-size: 24px;
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
   position: absolute;
   left: 0;
   top: -2px;
@@ -727,15 +753,18 @@ section {
   font-size: 18px;
   font-weight: bold;
   margin: 10px 0 5px 0;
-  color: #111;
+  /* color: #111; */
+  color: #00a84a;
 }
 .testimonials .testimonial-item h4 {
   font-size: 14px;
-  color: #999;
+  /* color: #999; */
+  color: #00a84a;
   margin: 0;
 }
 .testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
-  color: #c9e3f5;
+  /* color: #c9e3f5; */
+  color: #00a84a;
   font-size: 26px;
 }
 .testimonials .testimonial-item .quote-icon-left {
@@ -778,10 +807,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #2487ce;
+  border: 1px solid #00a84a;
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #2487ce;
+  background-color: #00a84a;
 }
 
 /*--------------------------------------------------------------
@@ -824,7 +853,8 @@ section {
   font-size: 22px;
 }
 .services .icon-box h4 a {
-  color: #124265;
+  /* color: #124265; */
+  color: #00a84a;
   transition: ease-in-out 0.3s;
 }
 .services .icon-box p {
@@ -837,13 +867,17 @@ section {
   box-shadow: 0px 0 35px 0 rgba(0, 0, 0, 0.08);
 }
 .services .iconbox-blue i {
-  color: #47aeff;
+  /* color: #47aeff; */
+  color: #00a84a;
 }
 .services .iconbox-blue:hover .icon i {
-  color: #fff;
+  /* color: #fff; */
+  color: #00a84a;
+
 }
 .services .iconbox-blue:hover .icon path {
-  fill: #47aeff;
+  /* fill: #47aeff; */
+  fill: #00a84a;
 }
 .services .iconbox-orange i {
   color: #ffa76e;
@@ -852,7 +886,8 @@ section {
   color: #fff;
 }
 .services .iconbox-orange:hover .icon path {
-  fill: #ffa76e;
+  /* fill: #ffa76e; */
+  fill: #00a84a;
 }
 .services .iconbox-pink i {
   color: #e80368;
@@ -861,7 +896,8 @@ section {
   color: #fff;
 }
 .services .iconbox-pink:hover .icon path {
-  fill: #e80368;
+  /* fill: #e80368; */
+  fill: #00a84a;
 }
 .services .iconbox-yellow i {
   color: #ffbb2c;
@@ -870,7 +906,8 @@ section {
   color: #fff;
 }
 .services .iconbox-yellow:hover .icon path {
-  fill: #ffbb2c;
+  /* fill: #ffbb2c; */
+  fill: #00a84a;
 }
 .services .iconbox-red i {
   color: #ff5828;
@@ -879,7 +916,8 @@ section {
   color: #fff;
 }
 .services .iconbox-red:hover .icon path {
-  fill: #ff5828;
+  /* fill: #ff5828; */
+  fill: #00a84a;
 }
 .services .iconbox-teal i {
   color: #11dbcf;
@@ -888,14 +926,16 @@ section {
   color: #fff;
 }
 .services .iconbox-teal:hover .icon path {
-  fill: #11dbcf;
+  /* fill: #11dbcf; */
+  fill: #00a84a;
 }
 
 /*--------------------------------------------------------------
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: #2487ce;
+  /* background: #2487ce; */
+  background: #00a84a;
   background-size: cover;
   padding: 60px 0;
 }
@@ -922,7 +962,8 @@ section {
 }
 .cta .cta-btn:hover {
   background: #fff;
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
 }
 
 /*--------------------------------------------------------------
@@ -1146,12 +1187,14 @@ section {
 }
 .team .member .social a {
   transition: color 0.3s;
-  color: #124265;
+  /* color: #124265; */
+  color: #00a84a;
   margin: 0 10px;
   display: inline-block;
 }
 .team .member .social a:hover {
-  color: #2487ce;
+  /* color: #2487ce; */
+  color: #00a84a;
 }
 .team .member .social i {
   font-size: 18px;
@@ -1165,7 +1208,8 @@ section {
   font-weight: 700;
   margin-bottom: 5px;
   font-size: 18px;
-  color: #124265;
+  /* color: #124265; */
+  color: #00a84a;
 }
 .team .member .member-info span {
   display: block;
@@ -1310,7 +1354,7 @@ section {
   position: absolute;
   right: 0;
   left: 20px;
-  color: #87c1ea;
+  color: #18d26e;
 }
 .faq .faq-list .icon-show, .faq .faq-list .icon-close {
   font-size: 24px;
@@ -1326,10 +1370,10 @@ section {
   display: none;
 }
 .faq .faq-list a.collapsed {
-  color: #343a40;
+  color: #00a84a;
 }
 .faq .faq-list a.collapsed:hover {
-  color: #2487ce;
+  color: #18d26e;
 }
 .faq .faq-list a.collapsed .icon-show {
   display: inline-block;
@@ -1352,7 +1396,7 @@ section {
 }
 .contact .info i {
   font-size: 20px;
-  color: #2487ce;
+  color: #00a84a;
   float: left;
   width: 44px;
   height: 44px;
@@ -1368,19 +1412,19 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #124265;
+  color: #00a84a;
 }
 .contact .info p {
   padding: 0 0 0 60px;
   margin-bottom: 0;
   font-size: 14px;
-  color: #217bbc;
+  color: #00a84a;
 }
 .contact .info .email, .contact .info .phone {
   margin-top: 40px;
 }
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #2487ce;
+  background: #18d26e;
   color: #fff;
 }
 .contact .php-email-form {
@@ -1434,7 +1478,7 @@ section {
   border-radius: 4px;
 }
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #2487ce;
+  border-color: #00a84a;
 }
 .contact .php-email-form input {
   height: 44px;
@@ -1443,7 +1487,7 @@ section {
   padding: 10px 12px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #2487ce;
+  background: #00a84a;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1451,7 +1495,7 @@ section {
   border-radius: 4px;
 }
 .contact .php-email-form button[type=submit]:hover {
-  background: #3194db;
+  background: #18d26e;
 }
 @-webkit-keyframes animate-loading {
   0% {
@@ -1502,7 +1546,7 @@ section {
 .breadcrumbs ol li + li::before {
   display: inline-block;
   padding-right: 10px;
-  color: #1a5e90;
+  color: #00a84a;
   content: "/";
 }
 @media (max-width: 768px) {
@@ -1550,7 +1594,7 @@ section {
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #124265;
+  color: #00a84a;
   position: relative;
   padding-bottom: 12px;
 }
@@ -1564,7 +1608,7 @@ section {
 }
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #2487ce;
+  color: #00a84a;
   font-size: 18px;
   line-height: 1;
 }
@@ -1636,7 +1680,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #2487ce;
+  background: #18d26e;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1648,7 +1692,7 @@ section {
   transition: 0.3s;
 }
 #footer .social-links a:hover {
-  background: #3194db;
+  background: #00a84a;
   color: #fff;
   text-decoration: none;
 }
