--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@ body {
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
 
 p {
-  color: #b3b3b3;
-  font-weight: 300; }
+  color: #444444;
+  font-weight: 400; }
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
