--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,13 +357,13 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100vh;
   position: relative;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/hero-bg1.jpg") top center;
   background-size: cover;
   position: relative;
 }
 #hero:before {
   content: "";
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.4);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -378,8 +378,9 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 56px;
   font-weight: 700;
   line-height: 72px;
-  /* color: #124265; */
-  color: #00a84a;
+  /* color: #124265; 
+  #066e33*/
+  color: #066e33;
   font-family: "Poppins", sans-serif;
 }
 #hero h2 {
@@ -456,7 +457,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-height: 800px) {
   #hero {
-    height: auto;
+    /* height: auto; */
   }
 }
 @media (max-width: 992px) {
