Alteração de cores do button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,7 +401,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 30px;
   color: #fff;
   /* background: #2487ce; */
-  background: #00a84a;
+  background: #066e33;
 }
 #hero .btn-get-started:hover {
   background: #00a84a;
